fix: define width of screenshot
If the intro title is too short then the image would
take stretch too far into the description.

--- a/assets/scss/pages/_works.scss
+++ b/assets/scss/pages/_works.scss
@@ -14,6 +14,7 @@
 .project-intro__screenshot {
   box-shadow: 0 .6rem 2.8rem .4rem rgba(47,53,66,.07),0 0 1.6rem .25rem rgba(47,53,66,.05);
   border-radius: 0.5rem;
+  flex: 3;
 }
 
 .project-details {
